--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SCRYPTmail ReactJS",
+  "name": "mailum-frontend",
   "version": "0.9.0",
   "description": "",
   "main": "index.js",
