--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "babel-preset-react": "^6.16.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
+    "babel-cli": "^7.23.2",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0"
   },
@@ -24,7 +24,7 @@
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/vSaKv/NewFront/issues"
+    "url": "https://github.com/Mailum/mailum-frontend/issues"
   },
-  "homepage": "https://github.com/vSaKv/NewFront#readme"
+  "homepage": "https://github.com/Mailum/mailum-frontend"
 }
