--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "babel": "^7.23.2",
-    "babel-cli": "^7.23.2",
-    "babel-preset-react": "^7.23.2"
+    "babel": "^6.5.2",
+    "babel-cli": "^6.18.0",
+    "babel-preset-react": "^6.16.0"
   },
   "devDependencies": {
-    "babel-cli": "^7.23.2",
-    "babel-preset-es2015": "^7.23.2",
-    "babel-preset-react": "^7.23.2"
+    "babel-cli": "^6.5.2",
+    "babel-preset-es2015": "^6.18.0"",
+    "babel-preset-react": "^6.16.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/vSaKv/NewFront.git"
+    "url": "git+https://github.com/Mailum/mailum-frontend.git"
   },
   "keywords": [],
   "author": "",
