--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "babel-preset-react": "^6.16.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.5.2",
-    "babel-preset-es2015": "^6.18.0"",
-    "babel-preset-react": "^6.16.0"
-  },
+  "babel-cli": "^7.23.2",
+  "babel-core": "^7.23.2",
+  "babel-preset-env": "^7.23.2"
+},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
